Atualizações de Links

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DoctorCare</title>
 
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="./style.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -133,7 +133,7 @@
 
         <div class="col-b">
 
-          <img src="/Foto.png" alt="Mulher negra vestindo moleton verde e sorrindo" />
+          <img src="./Foto.png" alt="Mulher negra vestindo moleton verde e sorrindo" />
 
         </div>
     
@@ -252,7 +252,7 @@
         </div>
 
         <div class="col-b">
-          <img src="doutor-feliz-segurando-prancheta-com-pacientes.png" alt="doutor feliz segurando prancheta com pacientes">
+          <img src="./doutor-feliz-segurando-prancheta-com-pacientes.png" alt="doutor feliz segurando prancheta com pacientes">
         </div>
 
       </div>
@@ -296,7 +296,7 @@
         </div>
 
         <div class="col-b">
-          <img src="homem-negro-com-moletom-bege-mexendo-no-celular.png" alt="homem negro com moletom bege mexendo no celular">
+          <img src="./homem-negro-com-moletom-bege-mexendo-no-celular.png" alt="homem negro com moletom bege mexendo no celular">
         </div>
 
       </div>
@@ -365,7 +365,7 @@
     <!--ScrollReavel Lib-->
     <script src="https://unpkg.com/scrollreveal"></script>
 
-    <script src="main.js"></script> 
+    <script src="./main.js"></script> 
     
   </body>
 </html>
